--- a/test.yml
+++ b/test.yml
@@ -2,3 +2,8 @@
 - hosts: all
   roles:
   - role: '{{ playbook_dir }}'
+  tasks:
+  - command: nancy --version
+    register: nancy_test_output
+  - debug:
+      msg: '{{ nancy_test_output.stdout }}'
