--- a/dcb-os.yml
+++ b/dcb-os.yml
@@ -1,5 +1,5 @@
 - alpine_3.11
-- alpine_3.11
+- alpine_3.12
 - alpine_edge
 - archlinux_latest
 - centos_7
@@ -11,4 +11,5 @@
 - ubi8_8.1
 - ubi8_8.2
 - ubuntu_bionic
+- ubuntu_focal
 - ubuntu_xenial
