--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for nancy
-nancy_platform: '{{ nancy_os }}.{{ nancy_arch }}'
-nancy_archive: nancy-{{ nancy_platform }}-{{ nancy_ver }}.{{ nancy_archive_type | default("tar.gz") }}
+nancy_platform: '{{ nancy_os }}-{{ nancy_arch }}'
+nancy_archive: nancy-{{ nancy_ver }}-{{ nancy_platform }}.{{ nancy_archive_type | default("tar.gz") }}
 nancy_url: '{{ nancy_mirror }}/{{ nancy_ver }}/{{ nancy_archive }}'
 nancy_checksum: '{{ nancy_checksums[nancy_ver][nancy_platform] }}'
 nancy_install_dir: '{{ nancy_parent_install_dir }}/nancy-{{ nancy_ver }}'
