--- a/tasks/tgz.yml
+++ b/tasks/tgz.yml
@@ -1,5 +1,5 @@
 ---
-- name: look for existing install
+- name: look for existing install in {{ nancy_install_dir }}
   become: '{{ nancy_privilege_escalate }}'
   become_user: root
   changed_when: False
@@ -8,35 +8,35 @@
   register: nancy_binary
 - when: not nancy_binary.stat.exists
   block:
-    - name: download nancy {{ nancy_ver }}
+    - name: download nancy {{ nancy_ver }} from {{ nancy_url }}
       become: '{{ nancy_privilege_escalate }}'
       become_user: root
       get_url:
         url: '{{ nancy_url }}'
         checksum: '{{ nancy_checksum }}'
-        dest: /tmp/{{ nancy_archive }}
+        dest: '{{ nancy_tmp_archive }}'
         mode: 0644
-    - name: make versioned directory to hold nancy {{ nancy_ver }}
+    - name: make versioned directory to hold nancy {{ nancy_ver }} at {{ nancy_install_dir }}
       become: '{{ nancy_privilege_escalate }}'
       become_user: root
       file:
         path: '{{ nancy_install_dir }}'
         state: directory
         mode: 0755
-    - name: unarchive nancy {{ nancy_ver }}
+    - name: unarchive nancy {{ nancy_ver }} from {{ nancy_tmp_archive }}
       become: '{{ nancy_privilege_escalate }}'
       become_user: root
       unarchive:
         remote_src: yes
-        src: /tmp/{{ nancy_archive }}
+        src: '{{ nancy_tmp_archive }}'
         dest: '{{ nancy_install_dir }}'
         creates: '{{ nancy_install_exe }}'
   always:
-    - name: clean up
+    - name: rm {{ nancy_tmp_archive }}
       become: '{{ nancy_privilege_escalate }}'
       become_user: root
       file:
-        path: /tmp/{{ nancy_archive }}
+        path: '{{ nancy_tmp_archive }}'
         state: absent
 - name: link nancy and nancy-{{ nancy_ver }}
   become: '{{ nancy_privilege_escalate }}'
