--- a/tasks/brew.yml
+++ b/tasks/brew.yml
@@ -1,5 +1,5 @@
 ---
-- name: install brew package
-  homebrew:
+- name: Install brew package
+  ansible.builtin.homebrew:
     name: sonatype-nexus-community/homebrew-nancy-tap/nancy
     state: present
